first_floor_layout

--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -436,7 +436,7 @@ MaterialExpressionWorldPosition="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-CleanShutdown=False
+CleanShutdown=True
 None=======
 None=======
 None=======
@@ -604,7 +604,7 @@ ContentBrowserDrawer.FavoritesAreaExpanded=False
 ContentBrowserDrawer.PathAreaExpanded=True
 ContentBrowserDrawer.CollectionAreaExpanded=True
 ContentBrowserDrawer.FavoritesSearchAreaExpanded=False
-ContentBrowserDrawer.PathSearchAreaExpanded=False
+ContentBrowserDrawer.PathSearchAreaExpanded=True
 ContentBrowserDrawer.CollectionSearchAreaExpanded=False
 ContentBrowserDrawer.VerticalSplitter.SlotSize0=0.150000006
 ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
@@ -619,7 +619,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Assets/Aziz/Assets
 ContentBrowserDrawer.SelectedPaths=/Game/Assets/Tashan/M4/Tashan/Assets/windows
 ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.SelectedPaths=/Game/Megascans/Surfaces/Weathered_Wooden_Planks_ulxqcedaw
-ContentBrowserDrawer.SelectedPaths=/Game/Assets/Amy/Textures/3Dprop_download_texture/wallpaper_light_2
+ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Tashan/M4/Tashan/Assets
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -1928,7 +1928,7 @@ WindowSize=X=1331.200 Y=771.200
 WindowSize=X=1340.800 Y=780.800
 WindowSize=X=1340.000 Y=780.000
 WindowSize=X=1352.000 Y=792.000
-WindowSize=X=1352.667 Y=792.667
+WindowSize=X=1355.333 Y=795.333
 StaticMesh.LevelOfDetail=True
 Door_Group_SM_Door_04_low_Blueprint_C.Networking=True
 StaticMesh.Thumbnail=True
@@ -1965,7 +1965,7 @@ BRUSH=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
 FBX=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
 FBXAnim=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
 GenericImport=../../../../../../Game Projects/Morrigan Hall/Assets/TOLPlaque/TreeOfLife_low_DefaultMaterial_BaseColor.png
-GenericExport=../../../../../../Users/igfxd/OneDrive/Documents/FMP Submission/Assets/WEB/Old_Dusty_Bookshelf_Spiderwebs_Mat_Opacity.PNG
+GenericExport=../../../../../../Users/xiiao/Desktop/Master/Module5/asset/unreal_rebuild/2m_Wakk.fbx
 GenericOpen=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
 GenericSave=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
 MeshImportExport=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
@@ -3004,9 +3004,9 @@ PortalProxies.LastCompileMethod=Unknown
 LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=C:/UE5/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=C:/UE5/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/UE5/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/UE5/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UE5/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UE5/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
@@ -3231,7 +3231,11 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Group_Assets/Tashan/M4/Tashan/Assets/mat_blend_Inst1.mat_blend_Inst1;
+RecentlyPlaced=/Game/Group_Assets/Charlotte/Assets/WallPaper/Wall_Paper_Char_01.Wall_Paper_Char_01;
+RecentlyPlaced=/Game/Assets/Tashan/M4/Tashan/Assets/windows/windowwalls_windowframe2.windowwalls_windowframe2;
 RecentlyPlaced=/Game/Assets/Amy/Textures/3Dprop_download_texture/wallpaper_light_2/wallpaper.wallpaper;
+RecentlyPlaced=/Game/Assets/Amy/Asset/slanted_wall_down_rebuilt.slanted_wall_down_rebuilt;
 RecentlyPlaced=/Game/Assets/Amy/Asset/_05_wall_doubleside._05_wall_doubleside;
 RecentlyPlaced=/Game/Assets/Amy/Asset/Slanted_wall_rebuild_UR.Slanted_wall_rebuild_UR;
 RecentlyPlaced=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Door_Frame_02_low.G_ModularAssets_Door_Window_01_SM_Door_Frame_02_low;
@@ -3247,10 +3251,6 @@ RecentlyPlaced=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaperoinst.mat_wallpa
 RecentlyPlaced=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper_Inst.mat_wallpaper_Inst;
 RecentlyPlaced=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper.mat_wallpaper;
 RecentlyPlaced=/Game/Group_Assets/Tashan/Decals/mm_decal_splash2.mm_decal_splash2;
-RecentlyPlaced=/Game/Group_Assets/Tashan/Decals/mm_decal_leak1.mm_decal_leak1;
-RecentlyPlaced=/Game/Group_Assets/Tashan/stairs_wallpaper.stairs_wallpaper;
-RecentlyPlaced=/Game/Group_Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Smooth_2m.Walls_Modular_01_Wall_Smooth_2m;
-RecentlyPlaced=/Game/Megascans/Surfaces/Carpet_pgwfuop0/MI_Carpet_pgwfuop0_2K_Inst.MI_Carpet_pgwfuop0_2K_Inst;
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
