thinking everythings about me

--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ LastLevel=/Game/Living_Room
 LastLevel=/Game/Assets/Amy/test
 LastLevel=/Game/Attic
 LastLevel=/Game/Assets/Amy/test
-LastLevel=/Game/Assets/Amy/firstfloor
+LastLevel=/Game/Living_Room
 None=======
 None=======
 None=======
@@ -436,7 +436,7 @@ MaterialExpressionWorldPosition="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-CleanShutdown=True
+CleanShutdown=False
 None=======
 None=======
 None=======
@@ -526,8 +526,8 @@ CameraSpeed=2
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/Assets/Amy/firstfloor
-MRUItem1=/Game/Living_Room
+MRUItem0=/Game/Living_Room
+MRUItem1=/Game/Assets/Amy/firstfloor
 MRUItem2=/Game/stairwellblock3
 MRUItem3=/Game/abandonedroom_V2
 MRUItem4=/Game/stairwellblock2
@@ -619,7 +619,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Assets/Aziz/Assets
 ContentBrowserDrawer.SelectedPaths=/Game/Assets/Tashan/M4/Tashan/Assets/windows
 ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.SelectedPaths=/Game/Megascans/Surfaces/Weathered_Wooden_Planks_ulxqcedaw
-ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Tashan/M4/Tashan/Assets
+ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/FenianShotgun
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -3368,8 +3368,8 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Amy/firstfloor
-MRUItem1=/Game/Living_Room
+MRUItem0=/Game/Living_Room
+MRUItem1=/Game/Assets/Amy/firstfloor
 MRUItem2=/Game/Assets/Amy/Textures/3Dprop_download_texture/wallpaper_light_2/wallpaper
 MRUItem3=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub
 MRUItem4=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub_Inst1
