--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -125,7 +125,7 @@ Object="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.
 Object="\"Object\" "
 Object="\"Object\" "
 Object="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 None=======
 None=======
 None=======
@@ -1872,6 +1872,7 @@ LogVisualizerSettings.VisualLogger=True
 RectLight.LOD=True
 MaterialExpressionWorldPosition.UMaterialExpressionWorldPosition=True
 MaterialExpressionWorldPosition.MaterialExpression=True
+Texture2D.Interchange =True
 
 [RootWindow]
 ScreenPosition=X=484.000 Y=296.000
@@ -3018,7 +3019,6 @@ None=======
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.Animation,MaterialEditorInstanceConstant.ParameterGroups.CloudColors,MaterialEditorInstanceConstant.ParameterGroups.Global,MaterialEditorInstanceConstant.ParameterGroups.Sky,MaterialEditorInstanceConstant.ParameterGroups.Sun,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,MaterialEditorInstanceConstant.ParameterGroups.01 - Input Textures,MaterialEditorInstanceConstant.ParameterGroups.02- UV Controls,MaterialEditorInstanceConstant.ParameterGroups.03 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.04 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.05 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.06 - Opacity,MaterialEditorInstanceConstant.ParameterGroups.07 - Normal,MaterialEditorInstanceConstant.ParameterGroups.08 - Parallax,
@@ -3368,26 +3368,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Living_Room
-MRUItem1=/Game/Assets/Amy/firstfloor
-MRUItem2=/Game/Assets/Amy/Textures/3Dprop_download_texture/wallpaper_light_2/wallpaper
-MRUItem3=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub
-MRUItem4=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub_Inst1
-MRUItem5=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub_Damaged
-MRUItem6=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mat_stainedglass
-MRUItem7=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
-MRUItem8=/Game/Assets/Tashan/stairs/stairs
-MRUItem9=/Game/Megascans/Surfaces/Carpet_pgwfuop0/MI_Carpet_pgwfuop0_2K_Inst
-MRUItem10=/Game/Group_Assets/Tashan/M4/Tashan/Assets/mat_blend
-MRUItem11=/Game/Assets/Tashan/stairs_wallpaper_2
-MRUItem12=/Game/Group_Assets/Tashan/M4/Tashan/Assets/masks
-MRUItem13=/Game/Assets/Tashan/stairs/mat_trim
-MRUItem14=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper
-MRUItem15=/Game/Group_Assets/Tashan/Stairs/stairs
-MRUItem16=/Game/Megascans/3D_Assets/Modular_Wooden_Ceiling_ugyqcitdw/T_Modular_Wooden_Ceiling_ugyqcitdw_2K_D
-MRUItem17=/Game/MSPresets/M_MS_Default_Material_VT/M_MS_Default_Material_VT
-MRUItem18=/Game/Megascans/3D_Assets/Modular_Wooden_Ceiling_ugyqcitdw/MI_Modular_Wooden_Ceiling_ugyqcitdw_2K
-MRUItem19=/Game/Megascans/Surfaces/Old_Wooden_Panel_tczlfasn/MI_Old_Wooden_Panel_tczlfasn_2K_Inst
+MRUItem0=/Game/Group_Assets/Aziz/Assets/FenianShotgun/SM_GunFrame
+MRUItem1=/Game/Group_Assets/Aziz/Assets/FenianShotgun/SM_Shotgun
+MRUItem2=/Game/Group_Assets/Aziz/Assets/FenianShotgun/Fenian_low_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem3=/Game/Living_Room
+MRUItem4=/Game/Assets/Amy/firstfloor
+MRUItem5=/Game/Assets/Amy/Textures/3Dprop_download_texture/wallpaper_light_2/wallpaper
+MRUItem6=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub
+MRUItem7=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub_Inst1
+MRUItem8=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub_Damaged
+MRUItem9=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mat_stainedglass
+MRUItem10=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
+MRUItem11=/Game/Assets/Tashan/stairs/stairs
+MRUItem12=/Game/Megascans/Surfaces/Carpet_pgwfuop0/MI_Carpet_pgwfuop0_2K_Inst
+MRUItem13=/Game/Group_Assets/Tashan/M4/Tashan/Assets/mat_blend
+MRUItem14=/Game/Assets/Tashan/stairs_wallpaper_2
+MRUItem15=/Game/Group_Assets/Tashan/M4/Tashan/Assets/masks
+MRUItem16=/Game/Assets/Tashan/stairs/mat_trim
+MRUItem17=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper
+MRUItem18=/Game/Group_Assets/Tashan/Stairs/stairs
+MRUItem19=/Game/Megascans/3D_Assets/Modular_Wooden_Ceiling_ugyqcitdw/T_Modular_Wooden_Ceiling_ugyqcitdw_2K_D
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
@@ -3633,6 +3633,9 @@ None=======
 /Game/Group_Assets/Tashan/Stairs/stairs.stairs=1
 /Game/Group_Assets/Tashan/M4/Tashan/Assets/masks.masks=1
 /Game/Megascans/Surfaces/Carpet_pgwfuop0/MI_Carpet_pgwfuop0_2K_Inst.MI_Carpet_pgwfuop0_2K_Inst=1
+/Game/Group_Assets/Aziz/Assets/FenianShotgun/Fenian_low_DefaultMaterial_OcclusionRoughnessMetallic.Fenian_low_DefaultMaterial_OcclusionRoughnessMetallic=1
+/Game/Group_Assets/Aziz/Assets/FenianShotgun/SM_Shotgun.SM_Shotgun=1
+/Game/Group_Assets/Aziz/Assets/FenianShotgun/SM_GunFrame.SM_GunFrame=1
 
 [MaterialEditor]
 PrimType=1
