--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -436,7 +436,7 @@ MaterialExpressionWorldPosition="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-CleanShutdown=True
+CleanShutdown=False
 None=======
 None=======
 None=======
@@ -690,6 +690,7 @@ Texture2D.LevelOfDetail=True
 Texture2D.Compression=True
 Texture2D.Interchange=True
 Texture2D.Interchange=False
+Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
@@ -1873,7 +1874,6 @@ LogVisualizerSettings.VisualLogger=True
 RectLight.LOD=True
 MaterialExpressionWorldPosition.UMaterialExpressionWorldPosition=True
 MaterialExpressionWorldPosition.MaterialExpression=True
-Texture2D.Interchange =True
 
 [RootWindow]
 ScreenPosition=X=484.000 Y=296.000
@@ -3370,26 +3370,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Group_Assets/Aziz/Assets/SM_WallTile3
-MRUItem1=/Game/Group_Assets/Aziz/Assets/Wall/SM_WoodWalls
-MRUItem2=/Game/Group_Assets/Aziz/Assets/Wall/Walls_low_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem3=/Game/Living_Room
-MRUItem4=/Game/Group_Assets/Aziz/Assets/FenianShotgun/SM_GunFrame
-MRUItem5=/Game/Group_Assets/Aziz/Assets/FenianShotgun/SM_Shotgun
-MRUItem6=/Game/Group_Assets/Aziz/Assets/FenianShotgun/Fenian_low_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem7=/Game/Assets/Amy/firstfloor
-MRUItem8=/Game/Assets/Amy/Textures/3Dprop_download_texture/wallpaper_light_2/wallpaper
-MRUItem9=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub
-MRUItem10=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub_Inst1
-MRUItem11=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub_Damaged
-MRUItem12=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mat_stainedglass
-MRUItem13=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
-MRUItem14=/Game/Assets/Tashan/stairs/stairs
-MRUItem15=/Game/Megascans/Surfaces/Carpet_pgwfuop0/MI_Carpet_pgwfuop0_2K_Inst
-MRUItem16=/Game/Group_Assets/Tashan/M4/Tashan/Assets/mat_blend
-MRUItem17=/Game/Assets/Tashan/stairs_wallpaper_2
-MRUItem18=/Game/Group_Assets/Tashan/M4/Tashan/Assets/masks
-MRUItem19=/Game/Assets/Tashan/stairs/mat_trim
+MRUItem0=/Game/Group_Assets/Aziz/Assets/SM_Wall2
+MRUItem1=/Game/Living_Room
+MRUItem2=/Game/Group_Assets/Aziz/Assets/SM_WallTile3
+MRUItem3=/Game/Group_Assets/Aziz/Assets/Wall/SM_WoodWalls
+MRUItem4=/Game/Group_Assets/Aziz/Assets/Wall/Walls_low_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem5=/Game/Group_Assets/Aziz/Assets/FenianShotgun/SM_GunFrame
+MRUItem6=/Game/Group_Assets/Aziz/Assets/FenianShotgun/SM_Shotgun
+MRUItem7=/Game/Group_Assets/Aziz/Assets/FenianShotgun/Fenian_low_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem8=/Game/Assets/Amy/firstfloor
+MRUItem9=/Game/Assets/Amy/Textures/3Dprop_download_texture/wallpaper_light_2/wallpaper
+MRUItem10=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub
+MRUItem11=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub_Inst1
+MRUItem12=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub_Damaged
+MRUItem13=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mat_stainedglass
+MRUItem14=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
+MRUItem15=/Game/Assets/Tashan/stairs/stairs
+MRUItem16=/Game/Megascans/Surfaces/Carpet_pgwfuop0/MI_Carpet_pgwfuop0_2K_Inst
+MRUItem17=/Game/Group_Assets/Tashan/M4/Tashan/Assets/mat_blend
+MRUItem18=/Game/Assets/Tashan/stairs_wallpaper_2
+MRUItem19=/Game/Group_Assets/Tashan/M4/Tashan/Assets/masks
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
@@ -3641,6 +3641,7 @@ None=======
 /Game/Group_Assets/Aziz/Assets/Wall/Walls_low_DefaultMaterial_OcclusionRoughnessMetallic.Walls_low_DefaultMaterial_OcclusionRoughnessMetallic=1
 /Game/Group_Assets/Aziz/Assets/Wall/SM_WoodWalls.SM_WoodWalls=1
 /Game/Group_Assets/Aziz/Assets/SM_WallTile3.SM_WallTile3=1
+/Game/Group_Assets/Aziz/Assets/SM_Wall2.SM_Wall2=1
 
 [MaterialEditor]
 PrimType=1
