--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -126,7 +126,7 @@ Object="\"Object\" "
 Object="\"Object\" "
 Object="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
 Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 None=======
 None=======
 None=======
@@ -156,7 +156,7 @@ MaterialInterface="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\
 MaterialInterface="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
 Texture2D="\"Object\" \"Object.Texture.SourceColorSettings\" "
 Texture="\"Object\" \"Object.Texture.SourceColorSettings\" "
-StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
+StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 MaterialExpressionConstant="\"Object\" "
 MaterialExpression="\"Object\" "
 MaterialExpressionScalarParameter="\"Object\" "
@@ -284,7 +284,7 @@ MaterialExpressionMaterialFunctionCall="\"Object\" "
 Actor="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
-StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
+StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 AssetViewerSettings="\"Object\" "
 MaterialExpressionAdd="\"Object\" "
 MaterialExpressionNormalize="\"Object\" "
@@ -627,7 +627,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Assets/Aziz/Assets
 ContentBrowserDrawer.SelectedPaths=/Game/Assets/Tashan/M4/Tashan/Assets/windows
 ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.SelectedPaths=/Game/Megascans/Surfaces/Weathered_Wooden_Planks_ulxqcedaw
-ContentBrowserDrawer.SelectedPaths=/Game/Assets/Amy/Asset/desk
+ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Tashan/Decals
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -3259,6 +3259,11 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Group_Assets/Tashan/Decals/mm_decal_splash.mm_decal_splash;
+RecentlyPlaced=/Game/Group_Assets/Tashan/Decals/mm_decal_splash2.mm_decal_splash2;
+RecentlyPlaced=/Game/Group_Assets/Tashan/Decals/mm_decal_leak1.mm_decal_leak1;
+RecentlyPlaced=/Game/Assets/Tashan/Decals/mm_decal_leak1_2.mm_decal_leak1_2;
+RecentlyPlaced=/Game/Assets/Tashan/Decals/mm_decal.mm_decal;
 RecentlyPlaced=/Game/Assets/Tashan/stairs/skirting_sm_sidestairwall_001.skirting_sm_sidestairwall_001;
 RecentlyPlaced=/Game/Assets/Tashan/stairs/StairSideAssets_sm_smallstaircurve_001.StairSideAssets_sm_smallstaircurve_001;
 RecentlyPlaced=/Game/Assets/Tashan/stairs/stairs.stairs;
@@ -3274,11 +3279,6 @@ RecentlyPlaced=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Win
 RecentlyPlaced=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Door_02_low.G_ModularAssets_Door_Window_01_SM_Door_02_low;
 RecentlyPlaced=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Door_01_low.G_ModularAssets_Door_Window_01_SM_Door_01_low;
 RecentlyPlaced=/Game/Group_Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Smooth_1m.Walls_Modular_01_Wall_Smooth_1m;
-RecentlyPlaced=/Game/Group_Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Door_01.Walls_Modular_01_Wall_Door_01;
-RecentlyPlaced=/Game/Group_Assets/Modular/MainStructureModularAssets/Walls_Doubleside_Wall_Doublesided_1m1.Walls_Doubleside_Wall_Doublesided_1m1;
-RecentlyPlaced=/Game/Group_Assets/Modular/MainStructureModularAssets/Walls_Doubleside_Wall_Doublesided_2m4.Walls_Doubleside_Wall_Doublesided_2m4;
-RecentlyPlaced=/Game/Group_Assets/Tashan/wallpaper/wallpapers_WP1_015.wallpapers_WP1_015;
-RecentlyPlaced=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaperoinst.mat_wallpaperoinst;
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -3396,26 +3396,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Amy/firstfloor
-MRUItem1=/Game/stairwellblock3
-MRUItem2=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mat_stainedglass
-MRUItem3=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
-MRUItem4=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper_Inst
-MRUItem5=/Game/Group_Assets/Tashan/wallpaper/wallpapers_WP1_015
-MRUItem6=/Game/Group_Assets/Tashan/wallpaper/wallpapers_WP1_013
-MRUItem7=/Game/Group_Assets/Tashan/wallpaper/Wallpaper_Albedo
-MRUItem8=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper
-MRUItem9=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub
-MRUItem10=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub_Inst1
-MRUItem11=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub_Damaged
-MRUItem12=/Game/Assets/Tashan/stairs/stairs
-MRUItem13=/Game/Megascans/Surfaces/Carpet_pgwfuop0/MI_Carpet_pgwfuop0_2K_Inst
-MRUItem14=/Game/Group_Assets/Tashan/M4/Tashan/Assets/mat_blend
-MRUItem15=/Game/Assets/Tashan/stairs_wallpaper_2
-MRUItem16=/Game/Group_Assets/Tashan/M4/Tashan/Assets/masks
-MRUItem17=/Game/Assets/Tashan/stairs/mat_trim
-MRUItem18=/Game/Group_Assets/Tashan/Stairs/stairs
-MRUItem19=/Game/Megascans/3D_Assets/Modular_Wooden_Ceiling_ugyqcitdw/T_Modular_Wooden_Ceiling_ugyqcitdw_2K_D
+MRUItem0=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Door_02_low
+MRUItem1=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Door_Frame_02_low
+MRUItem2=/Game/Group_Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Door_01
+MRUItem3=/Game/Assets/Amy/firstfloor
+MRUItem4=/Game/stairwellblock3
+MRUItem5=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mat_stainedglass
+MRUItem6=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
+MRUItem7=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper_Inst
+MRUItem8=/Game/Group_Assets/Tashan/wallpaper/wallpapers_WP1_015
+MRUItem9=/Game/Group_Assets/Tashan/wallpaper/wallpapers_WP1_013
+MRUItem10=/Game/Group_Assets/Tashan/wallpaper/Wallpaper_Albedo
+MRUItem11=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper
+MRUItem12=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub
+MRUItem13=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub_Inst1
+MRUItem14=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub_Damaged
+MRUItem15=/Game/Assets/Tashan/stairs/stairs
+MRUItem16=/Game/Megascans/Surfaces/Carpet_pgwfuop0/MI_Carpet_pgwfuop0_2K_Inst
+MRUItem17=/Game/Group_Assets/Tashan/M4/Tashan/Assets/mat_blend
+MRUItem18=/Game/Assets/Tashan/stairs_wallpaper_2
+MRUItem19=/Game/Group_Assets/Tashan/M4/Tashan/Assets/masks
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
@@ -3671,6 +3671,8 @@ None=======
 /Game/Group_Assets/Aziz/Assets/SM_Wall2.SM_Wall2=1
 /Game/Group_Assets/Tashan/wallpaper/wallpapers_WP1_015.wallpapers_WP1_015=1
 /Game/Group_Assets/Tashan/wallpaper/mat_wallpaper_Inst.mat_wallpaper_Inst=1
+/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Door_Frame_02_low.G_ModularAssets_Door_Window_01_SM_Door_Frame_02_low=1
+/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Door_02_low.G_ModularAssets_Door_Window_01_SM_Door_02_low=1
 
 [MaterialEditor]
 PrimType=1
