--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -663,7 +663,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Assets/Tashan/M4/Tashan/Assets/windows
 ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.SelectedPaths=/Game/Megascans/Surfaces/Weathered_Wooden_Planks_ulxqcedaw
 ContentBrowserDrawer.SelectedPaths=/Game/Assets/Tashan/table
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Sofa1m
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -3550,26 +3550,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Group_Assets/Aziz/Assets/Sofa2m/SM_2mSofa
-MRUItem1=/Game/Group_Assets/Aziz/Assets/Sofa2m/MI_Sofa2m
-MRUItem2=/Game/Group_Assets/Aziz/Assets/FenianShotgun/SM_GunFrame
-MRUItem3=/Game/Group_Assets/Aziz/Assets/FenianShotgun/MI_FenianShotgun
-MRUItem4=/Game/Group_Assets/Aziz/Assets/Sofa2m/Sofa2m_low_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem5=/Game/Living_Room
-MRUItem6=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper_char
-MRUItem7=/Game/Assets/Modular/wallpapers_WP1_012
-MRUItem8=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Wallpaper_03_OcclusionRoughnessMetallic
-MRUItem9=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Wallpaper_03_Normal
-MRUItem10=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Wallpaper_03_BaseColor
-MRUItem11=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper
-MRUItem12=/Game/Group_Assets/Tashan/M4/Tashan/Assets/mat_blend_Inst
-MRUItem13=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Wallpaper_05
-MRUItem14=/Game/Group_Assets/Tashan/M4/Tashan/Assets/mat_blend_Inst_04
-MRUItem15=/Game/Group_Assets/Tashan/M4/Tashan/Assets/mat_blend_Inst_Inst
-MRUItem16=/Game/Assets/Tashan/stairs/stairs
-MRUItem17=/Game/Assets/Tashan/stairs/modular/staircasemidcorner
-MRUItem18=/Game/Assets/Tashan/stairs/modular/staircasemidrailing
-MRUItem19=/Game/Assets/Tashan/stairs/modular/staircasemidM
+MRUItem0=/Game/Group_Assets/Aziz/Assets/Sofa1m/SM_1mSofa
+MRUItem1=/Game/Group_Assets/Aziz/Assets/Sofa1m/MI_Sofa1m
+MRUItem2=/Game/Group_Assets/Aziz/Assets/Sofa1m/Sofa1m_low_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem3=/Game/Group_Assets/Aziz/Assets/Sofa2m/SM_2mSofa
+MRUItem4=/Game/Group_Assets/Aziz/Assets/Sofa2m/MI_Sofa2m
+MRUItem5=/Game/Group_Assets/Aziz/Assets/FenianShotgun/SM_GunFrame
+MRUItem6=/Game/Group_Assets/Aziz/Assets/FenianShotgun/MI_FenianShotgun
+MRUItem7=/Game/Group_Assets/Aziz/Assets/Sofa2m/Sofa2m_low_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem8=/Game/Living_Room
+MRUItem9=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper_char
+MRUItem10=/Game/Assets/Modular/wallpapers_WP1_012
+MRUItem11=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Wallpaper_03_OcclusionRoughnessMetallic
+MRUItem12=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Wallpaper_03_Normal
+MRUItem13=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Wallpaper_03_BaseColor
+MRUItem14=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper
+MRUItem15=/Game/Group_Assets/Tashan/M4/Tashan/Assets/mat_blend_Inst
+MRUItem16=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Wallpaper_05
+MRUItem17=/Game/Group_Assets/Tashan/M4/Tashan/Assets/mat_blend_Inst_04
+MRUItem18=/Game/Group_Assets/Tashan/M4/Tashan/Assets/mat_blend_Inst_Inst
+MRUItem19=/Game/Assets/Tashan/stairs/stairs
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
@@ -3868,6 +3868,9 @@ None=======
 /Game/Group_Assets/Aziz/Assets/FenianShotgun/MI_FenianShotgun.MI_FenianShotgun=1
 /Game/Group_Assets/Aziz/Assets/Sofa2m/MI_Sofa2m.MI_Sofa2m=1
 /Game/Group_Assets/Aziz/Assets/Sofa2m/SM_2mSofa.SM_2mSofa=1
+/Game/Group_Assets/Aziz/Assets/Sofa1m/Sofa1m_low_DefaultMaterial_OcclusionRoughnessMetallic.Sofa1m_low_DefaultMaterial_OcclusionRoughnessMetallic=1
+/Game/Group_Assets/Aziz/Assets/Sofa1m/MI_Sofa1m.MI_Sofa1m=1
+/Game/Group_Assets/Aziz/Assets/Sofa1m/SM_1mSofa.SM_1mSofa=1
 
 [MaterialEditor]
 PrimType=1
@@ -4031,7 +4034,7 @@ bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
 
 [MaterialInstanceEditor]
-bShowGrid=True
+bShowGrid=False
 bDrawGrid=False
 PrimType=1
 
