--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -173,7 +173,7 @@ MaterialInterface="\"Object\" "
 Texture2D="\"Object\" \"Object.Texture.SourceColorSettings\" "
 Texture="\"Object\" \"Object.Texture.SourceColorSettings\" "
 StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
-StreamableRenderAsset="\"Object\" \"Object.Texture.SourceColorSettings\" "
+StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 MaterialExpressionConstant="\"Object\" "
 MaterialExpression="\"Object\" "
 MaterialExpressionScalarParameter="\"Object\" "
@@ -333,7 +333,7 @@ WorldSettings="\"Object\" \"Object.World.NavigationSystemConfig\" \"Object.Light
 WorldSettings="\"Object\" \"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Broadphase.BroadphaseSettings\" \"Object.Audio.DefaultReverbSettings\" "
 Info="\"Object\" \"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Broadphase.BroadphaseSettings\" \"Object.Audio.DefaultReverbSettings\" "
 Info=
-Info="\"Object\" "
+Info="\"Object\" \"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Broadphase.BroadphaseSettings\" \"Object.Audio.DefaultReverbSettings\" "
 DirectionalLight="\"Object\" \"Object.Light.DirectionalLightComponent.Object.LightShafts.BloomTint\" "
 Light="\"Object\" \"Object.Light.DirectionalLightComponent.Object.LightShafts.BloomTint\" "
 Light="\"Object\" "
@@ -460,7 +460,7 @@ MaterialExpressionStaticSwitch="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-CleanShutdown=True
+CleanShutdown=False
 None=======
 None=======
 None=======
@@ -470,6 +470,12 @@ None=======
 None=======
 None=======
 None=======
+OpenAssetsAtExit=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass.mi_stainedglass
+OpenAssetsAtExit=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mat_stainedglass.mat_stainedglass
+OpenAssetsAtExit=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood.MM_whitewood
+OpenAssetsAtExit=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_Texture.MM_Texture
+OpenAssetsAtExit=/Game/Group_Assets/Tashan/floorpiece/MM_FloorPiece.MM_FloorPiece
+OpenAssetsAtExit=/Game/Group_Assets/Tashan/floorpiece/sm_middlefloor.sm_middlefloor
 OpenAssetsAtExit=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror.M_Mirror
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
@@ -735,6 +741,7 @@ Texture2D.LevelOfDetail=True
 Texture2D.Compression=True
 Texture2D.Interchange=True
 Texture2D.Interchange=False
+Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
@@ -3395,6 +3402,7 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Group_Assets/Tashan/floorpiece/MM_FloorPiece.MM_FloorPiece;
 RecentlyPlaced=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror_Inst.M_Mirror_Inst;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Group_Assets/Tashan/floorpiece/MM_whitewood_floor.MM_whitewood_floor;
@@ -3414,7 +3422,6 @@ RecentlyPlaced=/Game/Assets/Tashan/table/table4_midbasemain_low.table4_midbasema
 RecentlyPlaced=/Game/Assets/Tashan/table/table4_mid4_low.table4_mid4_low;
 RecentlyPlaced=/Game/Assets/Tashan/table/table4_mid2_low.table4_mid2_low;
 RecentlyPlaced=/Game/Assets/Tashan/table/table4_lowdecor_low.table4_lowdecor_low;
-RecentlyPlaced=/Game/Assets/Tashan/table/table4_flower_decor_low.table4_flower_decor_low;
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -3532,49 +3539,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-<<<<<<< Updated upstream
-MRUItem0=/Game/Group_Assets/Aziz/Assets/Sofa1m/SM_1mSofa
-MRUItem1=/Game/Group_Assets/Aziz/Assets/Sofa1m/MI_Sofa1m
-MRUItem2=/Game/Group_Assets/Aziz/Assets/Sofa1m/Sofa1m_low_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem3=/Game/Group_Assets/Aziz/Assets/Sofa2m/SM_2mSofa
-MRUItem4=/Game/Group_Assets/Aziz/Assets/Sofa2m/MI_Sofa2m
-MRUItem5=/Game/Group_Assets/Aziz/Assets/FenianShotgun/SM_GunFrame
-MRUItem6=/Game/Group_Assets/Aziz/Assets/FenianShotgun/MI_FenianShotgun
-MRUItem7=/Game/Group_Assets/Aziz/Assets/Sofa2m/Sofa2m_low_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem8=/Game/Living_Room
-MRUItem9=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper_char
-MRUItem10=/Game/Assets/Modular/wallpapers_WP1_012
-MRUItem11=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Wallpaper_03_OcclusionRoughnessMetallic
-MRUItem12=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Wallpaper_03_Normal
-MRUItem13=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Wallpaper_03_BaseColor
-MRUItem14=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper
-MRUItem15=/Game/Group_Assets/Tashan/M4/Tashan/Assets/mat_blend_Inst
-MRUItem16=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Wallpaper_05
-MRUItem17=/Game/Group_Assets/Tashan/M4/Tashan/Assets/mat_blend_Inst_04
-MRUItem18=/Game/Group_Assets/Tashan/M4/Tashan/Assets/mat_blend_Inst_Inst
-MRUItem19=/Game/Assets/Tashan/stairs/stairs
-=======
-MRUItem0=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror
-MRUItem1=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror_Inst
-MRUItem2=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_Texture
-MRUItem3=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood
-MRUItem4=/Game/Group_Assets/Tashan/floorpiece/Floor_Seperate_basecolor
-MRUItem5=/Game/Group_Assets/Tashan/floorpiece/MM_whitewood_floor
-MRUItem6=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mat_stainedglass
-MRUItem7=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
-MRUItem8=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub_Damaged
-MRUItem9=/Game/Assets/Tashan/floor/Carpet_Albedo
-MRUItem10=/Game/Assets/Tashan/floor/mat_floors_Inst
-MRUItem11=/Game/Group_Assets/Tashan/floorpiece/Floor_Seperate_AORM
-MRUItem12=/Game/Group_Assets/Tashan/floorpiece/Floor_Seperate_normal
-MRUItem13=/Game/Group_Assets/Tashan/floorpiece/Floor_Seperate_basecolor_2
-MRUItem14=/Game/Group_Assets/Tashan/floorpiece/MM_whitewood_floor_dark
-MRUItem15=/Game/Group_Assets/Tashan/floorpiece/MM_whitewood
-MRUItem16=/Game/Group_Assets/Tashan/floorpiece/mat_wallpaper_floor
-MRUItem17=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood_floor
-MRUItem18=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper
-MRUItem19=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper_Inst
->>>>>>> Stashed changes
+MRUItem0=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror_Inst
+MRUItem1=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror
+MRUItem2=/Game/Group_Assets/Tashan/floorpiece/Floor_Seperate_basecolor_2
+MRUItem3=/Game/Group_Assets/Tashan/floorpiece/MM_FloorPiece_Inst
+MRUItem4=/Game/Group_Assets/Tashan/floorpiece/sm_middlefloor
+MRUItem5=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_FloorPiece
+MRUItem6=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_Texture
+MRUItem7=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood
+MRUItem8=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mat_stainedglass
+MRUItem9=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
+MRUItem10=/Game/Group_Assets/Tashan/floorpiece/Floor_Seperate_basecolor
+MRUItem11=/Game/Group_Assets/Tashan/floorpiece/MM_whitewood_floor
+MRUItem12=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub_Damaged
+MRUItem13=/Game/Assets/Tashan/floor/Carpet_Albedo
+MRUItem14=/Game/Assets/Tashan/floor/mat_floors_Inst
+MRUItem15=/Game/Group_Assets/Tashan/floorpiece/Floor_Seperate_AORM
+MRUItem16=/Game/Group_Assets/Tashan/floorpiece/Floor_Seperate_normal
+MRUItem17=/Game/Group_Assets/Tashan/floorpiece/MM_whitewood_floor_dark
+MRUItem18=/Game/Group_Assets/Tashan/floorpiece/MM_whitewood
+MRUItem19=/Game/Group_Assets/Tashan/floorpiece/mat_wallpaper_floor
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
@@ -3650,6 +3634,7 @@ MRUItem19=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper_Inst
 /Game/Assets/Aziz/Assets/Bookshelf/Bookshelf_low.Bookshelf_low=1
 /Game/Assets/Aziz/Assets/Bookshelf/Bookshelf_low_LowPoly_BaseColor.Bookshelf_low_LowPoly_BaseColor=1
 /Game/Assets/Aziz/Assets/Bookshelf/Bookshelf_low_LowPoly_Normal.Bookshelf_low_LowPoly_Normal=1
+None=======
 None=======
 None=======
 None=======
@@ -3873,11 +3858,9 @@ None=======
 /Game/Group_Assets/Aziz/Assets/FenianShotgun/MI_FenianShotgun.MI_FenianShotgun=1
 /Game/Group_Assets/Aziz/Assets/Sofa2m/MI_Sofa2m.MI_Sofa2m=1
 /Game/Group_Assets/Aziz/Assets/Sofa2m/SM_2mSofa.SM_2mSofa=1
-<<<<<<< Updated upstream
 /Game/Group_Assets/Aziz/Assets/Sofa1m/Sofa1m_low_DefaultMaterial_OcclusionRoughnessMetallic.Sofa1m_low_DefaultMaterial_OcclusionRoughnessMetallic=1
 /Game/Group_Assets/Aziz/Assets/Sofa1m/MI_Sofa1m.MI_Sofa1m=1
 /Game/Group_Assets/Aziz/Assets/Sofa1m/SM_1mSofa.SM_1mSofa=1
-=======
 /Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood_floor.MM_whitewood_floor=1
 /Game/Group_Assets/Tashan/floorpiece/Floor_Seperate_basecolor.Floor_Seperate_basecolor=1
 /Game/Group_Assets/Tashan/floorpiece/Floor_Seperate_normal.Floor_Seperate_normal=1
@@ -3885,7 +3868,6 @@ None=======
 /Game/Group_Assets/Tashan/floorpiece/mat_wallpaper_floor.mat_wallpaper_floor=1
 /Game/Group_Assets/Tashan/floorpiece/MM_whitewood_floor_dark.MM_whitewood_floor_dark=1
 /Game/Group_Assets/Tashan/floorpiece/MM_whitewood_floor.MM_whitewood_floor=1
->>>>>>> Stashed changes
 
 [MaterialEditor]
 PrimType=1
