--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -460,7 +460,7 @@ MaterialExpressionStaticSwitch="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-CleanShutdown=True
+CleanShutdown=False
 None=======
 None=======
 None=======
@@ -470,18 +470,7 @@ None=======
 None=======
 None=======
 None=======
-<<<<<<< HEAD
-OpenAssetsAtExit=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass.mi_stainedglass
-OpenAssetsAtExit=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mat_stainedglass.mat_stainedglass
-OpenAssetsAtExit=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood.MM_whitewood
-OpenAssetsAtExit=/Game/Group_Assets/Tashan/floorpiece/MM_FloorPiece.MM_FloorPiece
-OpenAssetsAtExit=/Game/Group_Assets/Tashan/floorpiece/sm_middlefloor.sm_middlefloor
-OpenAssetsAtExit=/Game/Group_Assets/Tashan/floorpiece/MM_FloorPiece_Inst.MM_FloorPiece_Inst
-OpenAssetsAtExit=/Game/Group_Assets/Tashan/floorpiece/Floor_Seperate_basecolor_2.Floor_Seperate_basecolor_2
-OpenAssetsAtExit=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror.M_Mirror
-OpenAssetsAtExit=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror_Inst.M_Mirror_Inst
-=======
->>>>>>> 6841d8897c80c88cb62ce92f7fb4c204743920ea
+None=======
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -569,6 +558,7 @@ CameraSpeed=2
 CameraSpeed=2
 CurrentRotGridSize=0
 CurrentRotGridSize=6
+RotGridEnabled=False
 
 [MRU]
 MRUItem0=/Game/Living_Room
@@ -674,7 +664,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Assets/Tashan/M4/Tashan/Assets/windows
 ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.SelectedPaths=/Game/Megascans/Surfaces/Weathered_Wooden_Planks_ulxqcedaw
 ContentBrowserDrawer.SelectedPaths=/Game/Assets/Tashan/table
-ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Sofa1m
+ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Pillows
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -1976,6 +1966,7 @@ StaticMeshComponent.Sockets=True
 StaticMeshComponent.ComponentTick=True
 StaticMeshComponent.ComponentReplication=True
 StaticMeshComponent.Events=True
+Texture2D.Interchange =True
 
 [RootWindow]
 ScreenPosition=X=484.000 Y=296.000
@@ -3406,11 +3397,11 @@ None=======
 None=======
 None=======
 None=======
-<<<<<<< HEAD
+None=======
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Pillows/Pillow_large.Pillow_large;
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Pillows/Pillow_small.Pillow_small;
 RecentlyPlaced=/Game/Group_Assets/Tashan/floorpiece/MM_FloorPiece.MM_FloorPiece;
-=======
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Sofa1m/SofaPillow.SofaPillow;
->>>>>>> 6841d8897c80c88cb62ce92f7fb4c204743920ea
 RecentlyPlaced=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror_Inst.M_Mirror_Inst;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Group_Assets/Tashan/floorpiece/MM_whitewood_floor.MM_whitewood_floor;
@@ -3427,9 +3418,6 @@ RecentlyPlaced=/Game/Assets/Tashan/table/table4_UpperTableDecor_low.table4_Upper
 RecentlyPlaced=/Game/Assets/Tashan/table/table4_tabletop_low.table4_tabletop_low;
 RecentlyPlaced=/Game/Assets/Tashan/table/table4_middlepillar_low.table4_middlepillar_low;
 RecentlyPlaced=/Game/Assets/Tashan/table/table4_midbasemain_low.table4_midbasemain_low;
-RecentlyPlaced=/Game/Assets/Tashan/table/table4_mid4_low.table4_mid4_low;
-RecentlyPlaced=/Game/Assets/Tashan/table/table4_mid2_low.table4_mid2_low;
-RecentlyPlaced=/Game/Assets/Tashan/table/table4_lowdecor_low.table4_lowdecor_low;
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -3547,49 +3535,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-<<<<<<< HEAD
-MRUItem0=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror_Inst
-MRUItem1=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror
-MRUItem2=/Game/Group_Assets/Tashan/floorpiece/Floor_Seperate_basecolor_2
-MRUItem3=/Game/Group_Assets/Tashan/floorpiece/MM_FloorPiece_Inst
-MRUItem4=/Game/Group_Assets/Tashan/floorpiece/sm_middlefloor
-MRUItem5=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_FloorPiece
-MRUItem6=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_Texture
-MRUItem7=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood
-MRUItem8=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mat_stainedglass
-MRUItem9=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
+MRUItem0=/Game/Living_Room
+MRUItem1=/Game/Group_Assets/Aziz/Assets/Pillows/Pillow_small
+MRUItem2=/Game/Group_Assets/Aziz/Assets/Pillows/Pillow_large
+MRUItem3=/Game/Group_Assets/Aziz/Assets/Pillows/MI_SofaPillows
+MRUItem4=/Game/Group_Assets/Aziz/Assets/Pillows/Pillow_low_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem5=/Game/Group_Assets/Aziz/Assets/Sofa1m/SofaPillow
+MRUItem6=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror
+MRUItem7=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror_Inst
+MRUItem8=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_Texture
+MRUItem9=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood
 MRUItem10=/Game/Group_Assets/Tashan/floorpiece/Floor_Seperate_basecolor
 MRUItem11=/Game/Group_Assets/Tashan/floorpiece/MM_whitewood_floor
-MRUItem12=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub_Damaged
-MRUItem13=/Game/Assets/Tashan/floor/Carpet_Albedo
-MRUItem14=/Game/Assets/Tashan/floor/mat_floors_Inst
-MRUItem15=/Game/Group_Assets/Tashan/floorpiece/Floor_Seperate_AORM
-MRUItem16=/Game/Group_Assets/Tashan/floorpiece/Floor_Seperate_normal
-MRUItem17=/Game/Group_Assets/Tashan/floorpiece/MM_whitewood_floor_dark
-MRUItem18=/Game/Group_Assets/Tashan/floorpiece/MM_whitewood
-MRUItem19=/Game/Group_Assets/Tashan/floorpiece/mat_wallpaper_floor
-=======
-MRUItem0=/Game/Group_Assets/Aziz/Assets/Sofa1m/SofaPillow
-MRUItem1=/Game/Living_Room
-MRUItem2=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror
-MRUItem3=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror_Inst
-MRUItem4=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_Texture
-MRUItem5=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood
-MRUItem6=/Game/Group_Assets/Tashan/floorpiece/Floor_Seperate_basecolor
-MRUItem7=/Game/Group_Assets/Tashan/floorpiece/MM_whitewood_floor
-MRUItem8=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mat_stainedglass
-MRUItem9=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
-MRUItem10=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub_Damaged
-MRUItem11=/Game/Assets/Tashan/floor/Carpet_Albedo
-MRUItem12=/Game/Assets/Tashan/floor/mat_floors_Inst
-MRUItem13=/Game/Group_Assets/Tashan/floorpiece/Floor_Seperate_AORM
-MRUItem14=/Game/Group_Assets/Tashan/floorpiece/Floor_Seperate_normal
-MRUItem15=/Game/Group_Assets/Tashan/floorpiece/Floor_Seperate_basecolor_2
-MRUItem16=/Game/Group_Assets/Tashan/floorpiece/MM_whitewood_floor_dark
-MRUItem17=/Game/Group_Assets/Tashan/floorpiece/MM_whitewood
-MRUItem18=/Game/Group_Assets/Tashan/floorpiece/mat_wallpaper_floor
-MRUItem19=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood_floor
->>>>>>> 6841d8897c80c88cb62ce92f7fb4c204743920ea
+MRUItem12=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mat_stainedglass
+MRUItem13=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
+MRUItem14=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub_Damaged
+MRUItem15=/Game/Assets/Tashan/floor/Carpet_Albedo
+MRUItem16=/Game/Assets/Tashan/floor/mat_floors_Inst
+MRUItem17=/Game/Group_Assets/Tashan/floorpiece/Floor_Seperate_AORM
+MRUItem18=/Game/Group_Assets/Tashan/floorpiece/Floor_Seperate_normal
+MRUItem19=/Game/Group_Assets/Tashan/floorpiece/Floor_Seperate_basecolor_2
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
@@ -3665,6 +3630,7 @@ MRUItem19=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood_floor
 /Game/Assets/Aziz/Assets/Bookshelf/Bookshelf_low.Bookshelf_low=1
 /Game/Assets/Aziz/Assets/Bookshelf/Bookshelf_low_LowPoly_BaseColor.Bookshelf_low_LowPoly_BaseColor=1
 /Game/Assets/Aziz/Assets/Bookshelf/Bookshelf_low_LowPoly_Normal.Bookshelf_low_LowPoly_Normal=1
+None=======
 None=======
 None=======
 None=======
@@ -3899,15 +3865,16 @@ None=======
 /Game/Group_Assets/Tashan/floorpiece/mat_wallpaper_floor.mat_wallpaper_floor=1
 /Game/Group_Assets/Tashan/floorpiece/MM_whitewood_floor_dark.MM_whitewood_floor_dark=1
 /Game/Group_Assets/Tashan/floorpiece/MM_whitewood_floor.MM_whitewood_floor=1
-<<<<<<< HEAD
 /Game/Group_Assets/Tashan/floorpiece/MM_FloorPiece.MM_FloorPiece=1
 /Game/Group_Assets/Tashan/floorpiece/sm_middlefloor.sm_middlefloor=1
 /Game/Group_Assets/Tashan/floorpiece/MM_FloorPiece_Inst.MM_FloorPiece_Inst=1
 /Game/Group_Assets/Tashan/floorpiece/Floor_Seperate_basecolor_2.Floor_Seperate_basecolor_2=1
 /Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror_Inst.M_Mirror_Inst=1
-=======
 /Game/Group_Assets/Aziz/Assets/Sofa1m/SofaPillow.SofaPillow=1
->>>>>>> 6841d8897c80c88cb62ce92f7fb4c204743920ea
+/Game/Group_Assets/Aziz/Assets/Pillows/Pillow_low_DefaultMaterial_OcclusionRoughnessMetallic.Pillow_low_DefaultMaterial_OcclusionRoughnessMetallic=1
+/Game/Group_Assets/Aziz/Assets/Pillows/MI_SofaPillows.MI_SofaPillows=1
+/Game/Group_Assets/Aziz/Assets/Pillows/Pillow_large.Pillow_large=1
+/Game/Group_Assets/Aziz/Assets/Pillows/Pillow_small.Pillow_small=1
 
 [MaterialEditor]
 PrimType=1
@@ -4071,7 +4038,7 @@ bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
 
 [MaterialInstanceEditor]
-bShowGrid=True
+bShowGrid=False
 bDrawGrid=False
 PrimType=1
 
