--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -169,7 +169,7 @@ PreviewMaterial="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" 
 Material="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 Material="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 MaterialInterface="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
-MaterialInterface="\"Object\" "
+MaterialInterface="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 Texture2D="\"Object\" \"Object.Texture.SourceColorSettings\" "
 Texture="\"Object\" \"Object.Texture.SourceColorSettings\" "
 StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
@@ -460,7 +460,7 @@ MaterialExpressionStaticSwitch="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-CleanShutdown=True
+CleanShutdown=False
 None=======
 None=======
 None=======
@@ -664,7 +664,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Assets/Tashan/M4/Tashan/Assets/windows
 ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.SelectedPaths=/Game/Megascans/Surfaces/Weathered_Wooden_Planks_ulxqcedaw
 ContentBrowserDrawer.SelectedPaths=/Game/Assets/Tashan/table
-ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Sofa2m
+ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Carpet
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -3141,7 +3141,6 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/Control
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.Animation,MaterialEditorInstanceConstant.ParameterGroups.CloudColors,MaterialEditorInstanceConstant.ParameterGroups.Global,MaterialEditorInstanceConstant.ParameterGroups.Sky,MaterialEditorInstanceConstant.ParameterGroups.Sun,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,MaterialEditorInstanceConstant.ParameterGroups.01 - Input Textures,MaterialEditorInstanceConstant.ParameterGroups.02- UV Controls,MaterialEditorInstanceConstant.ParameterGroups.03 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.04 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.05 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.06 - Opacity,MaterialEditorInstanceConstant.ParameterGroups.07 - Normal,MaterialEditorInstanceConstant.ParameterGroups.08 - Parallax,
@@ -3398,6 +3397,7 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Carpet/SM_Carpet.SM_Carpet;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Pillows/Pillow_large.Pillow_large;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Pillows/Pillow_small.Pillow_small;
 RecentlyPlaced=/Game/Group_Assets/Tashan/floorpiece/MM_FloorPiece.MM_FloorPiece;
@@ -3417,7 +3417,6 @@ RecentlyPlaced=/Game/Assets/Tashan/table/table4_wheelbase_low.table4_wheelbase_l
 RecentlyPlaced=/Game/Assets/Tashan/table/table4_UpperTableDecor_low.table4_UpperTableDecor_low;
 RecentlyPlaced=/Game/Assets/Tashan/table/table4_tabletop_low.table4_tabletop_low;
 RecentlyPlaced=/Game/Assets/Tashan/table/table4_middlepillar_low.table4_middlepillar_low;
-RecentlyPlaced=/Game/Assets/Tashan/table/table4_midbasemain_low.table4_midbasemain_low;
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -3535,26 +3534,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Living_Room
-MRUItem1=/Game/Group_Assets/Aziz/Assets/Pillows/Pillow_small
-MRUItem2=/Game/Group_Assets/Aziz/Assets/Pillows/Pillow_large
-MRUItem3=/Game/Group_Assets/Aziz/Assets/Pillows/MI_SofaPillows
-MRUItem4=/Game/Group_Assets/Aziz/Assets/Pillows/Pillow_low_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem5=/Game/Group_Assets/Aziz/Assets/Sofa1m/SofaPillow
-MRUItem6=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror
-MRUItem7=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror_Inst
-MRUItem8=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_Texture
-MRUItem9=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood
-MRUItem10=/Game/Group_Assets/Tashan/floorpiece/Floor_Seperate_basecolor
-MRUItem11=/Game/Group_Assets/Tashan/floorpiece/MM_whitewood_floor
-MRUItem12=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mat_stainedglass
-MRUItem13=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
-MRUItem14=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub_Damaged
-MRUItem15=/Game/Assets/Tashan/floor/Carpet_Albedo
-MRUItem16=/Game/Assets/Tashan/floor/mat_floors_Inst
-MRUItem17=/Game/Group_Assets/Tashan/floorpiece/Floor_Seperate_AORM
-MRUItem18=/Game/Group_Assets/Tashan/floorpiece/Floor_Seperate_normal
-MRUItem19=/Game/Group_Assets/Tashan/floorpiece/Floor_Seperate_basecolor_2
+MRUItem0=/Game/Group_Assets/Aziz/Assets/Carpet/SM_Carpet
+MRUItem1=/Game/Group_Assets/Aziz/Assets/Carpet/MM_Carpet
+MRUItem2=/Game/Group_Assets/Aziz/Assets/Carpet/MI_Carpet
+MRUItem3=/Game/Living_Room
+MRUItem4=/Game/Group_Assets/Aziz/Assets/Pillows/Pillow_small
+MRUItem5=/Game/Group_Assets/Aziz/Assets/Pillows/Pillow_large
+MRUItem6=/Game/Group_Assets/Aziz/Assets/Pillows/MI_SofaPillows
+MRUItem7=/Game/Group_Assets/Aziz/Assets/Pillows/Pillow_low_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem8=/Game/Group_Assets/Aziz/Assets/Sofa1m/SofaPillow
+MRUItem9=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror
+MRUItem10=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror_Inst
+MRUItem11=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_Texture
+MRUItem12=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood
+MRUItem13=/Game/Group_Assets/Tashan/floorpiece/Floor_Seperate_basecolor
+MRUItem14=/Game/Group_Assets/Tashan/floorpiece/MM_whitewood_floor
+MRUItem15=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mat_stainedglass
+MRUItem16=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
+MRUItem17=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub_Damaged
+MRUItem18=/Game/Assets/Tashan/floor/Carpet_Albedo
+MRUItem19=/Game/Assets/Tashan/floor/mat_floors_Inst
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
@@ -3875,6 +3874,9 @@ None=======
 /Game/Group_Assets/Aziz/Assets/Pillows/MI_SofaPillows.MI_SofaPillows=1
 /Game/Group_Assets/Aziz/Assets/Pillows/Pillow_large.Pillow_large=1
 /Game/Group_Assets/Aziz/Assets/Pillows/Pillow_small.Pillow_small=1
+/Game/Group_Assets/Aziz/Assets/Carpet/MI_Carpet.MI_Carpet=1
+/Game/Group_Assets/Aziz/Assets/Carpet/MM_Carpet.MM_Carpet=1
+/Game/Group_Assets/Aziz/Assets/Carpet/SM_Carpet.SM_Carpet=1
 
 [MaterialEditor]
 PrimType=1
@@ -4038,7 +4040,7 @@ bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
 
 [MaterialInstanceEditor]
-bShowGrid=False
+bShowGrid=True
 bDrawGrid=False
 PrimType=1
 
