--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -137,7 +137,7 @@ Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.Stati
 Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 Object="\"Object\" \"Object.Texture.SourceColorSettings\" "
-Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
+Object="\"Object\" "
 None=======
 None=======
 None=======
@@ -3534,8 +3534,8 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Group_Assets/Aziz/Assets/Carpet/SM_Carpet
-MRUItem1=/Game/Group_Assets/Aziz/Assets/Carpet/MM_Carpet
+MRUItem0=/Game/Group_Assets/Aziz/Assets/Carpet/MM_Carpet
+MRUItem1=/Game/Group_Assets/Aziz/Assets/Carpet/SM_Carpet
 MRUItem2=/Game/Group_Assets/Aziz/Assets/Carpet/MI_Carpet
 MRUItem3=/Game/Living_Room
 MRUItem4=/Game/Group_Assets/Aziz/Assets/Pillows/Pillow_small
