--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -110,7 +110,7 @@ LastLevel=/Game/Living_Room
 LastLevel=/Game/stairwellblock3
 LastLevel=/Game/Living_Room
 LastLevel=/Game/stairwellblock3
-LastLevel=/Game/Attic
+LastLevel=/Game/Living_Room
 None=======
 None=======
 None=======
@@ -473,7 +473,7 @@ MaterialExpressionDivide="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-CleanShutdown=True
+CleanShutdown=False
 None=======
 None=======
 None=======
@@ -486,7 +486,6 @@ None=======
 None=======
 None=======
 None=======
-OpenAssetsAtExit=/Game/Group_Materials/Brick/Brick_Inst.Brick_Inst
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -578,8 +577,8 @@ CurrentRotGridSize=6
 RotGridEnabled=False
 
 [MRU]
-MRUItem0=/Game/Attic
-MRUItem1=/Game/Living_Room
+MRUItem0=/Game/Living_Room
+MRUItem1=/Game/Attic
 MRUItem2=/Game/stairwellblock3
 MRUItem3=/Game/Assets/Amy/firstfloor
 MRUItem4=/Game/abandonedroom_V2
@@ -3334,14 +3333,14 @@ PostProcessVolume=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.
 PostProcessVolume=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens
 PostProcessVolume=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Color Grading.Color Grading,RectLight.TransformCommon.Transform,PostProcessVolume.Lens.Lens
 PostProcessVolume=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Color Grading.Color Grading,RectLight.TransformCommon.Transform,
-PostProcessVolume=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Color Grading.Color Grading,RectLight.TransformCommon.Transform,PostProcessVolume.Lens.Lens|Exposure,
+PostProcessVolume=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Color Grading.Color Grading,RectLight.TransformCommon.Transform,PostProcessVolume.Lens.Lens
 BrushComponent=
 BrushComponent=
 BrushComponent=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens
 BrushComponent=
 BrushComponent=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Color Grading.Color Grading,RectLight.TransformCommon.Transform,PostProcessVolume.Lens.Lens
 BrushComponent=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Color Grading.Color Grading,RectLight.TransformCommon.Transform,
-BrushComponent=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Color Grading.Color Grading,RectLight.TransformCommon.Transform,PostProcessVolume.Lens.Lens|Exposure,
+BrushComponent=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Color Grading.Color Grading,RectLight.TransformCommon.Transform,PostProcessVolume.Lens.Lens
 StaticMeshActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 StaticMeshActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 StaticMeshActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
@@ -3352,7 +3351,7 @@ StaticMeshActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Le
 StaticMeshActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Color Grading.Color Grading,RectLight.TransformCommon.Transform,PostProcessVolume.Lens.Lens
 StaticMeshActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Color Grading.Color Grading,
 StaticMeshActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Color Grading.Color Grading,RectLight.TransformCommon.Transform,
-StaticMeshActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Color Grading.Color Grading,RectLight.TransformCommon.Transform,PostProcessVolume.Lens.Lens|Exposure,
+StaticMeshActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Color Grading.Color Grading,RectLight.TransformCommon.Transform,PostProcessVolume.Lens.Lens
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails,
 WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails,
 TriggerVolume=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
@@ -3580,11 +3579,11 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Group_Materials/Brick/Brick_Inst
-MRUItem1=/Game/Group_Materials/Brick/Brick
-MRUItem2=/Game/Group_Materials/Brick/Brick_Height
-MRUItem3=/Game/Group_Assets/Aziz/Assets/Sofa1m/SofaPillow
-MRUItem4=/Game/Living_Room
+MRUItem0=/Game/Living_Room
+MRUItem1=/Game/Group_Materials/Brick/Brick_Inst
+MRUItem2=/Game/Group_Materials/Brick/Brick
+MRUItem3=/Game/Group_Materials/Brick/Brick_Height
+MRUItem4=/Game/Group_Assets/Aziz/Assets/Sofa1m/SofaPillow
 MRUItem5=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror
 MRUItem6=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror_Inst
 MRUItem7=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_Texture
